# sql-parser

./: .gitignore  Cargo.toml  LICENSE  README.md  build-wasm.bat  build-wasm.sh  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml
examples/: basic_usage.rs  wasm_example.html
lib/: data-type.ts  expr.ts  function.ts  ident.ts  index.ts  keyword.ts  span.ts  statement.ts  token.ts  types.ts
src/: lib.rs
tests/: integration_test.rs  wasm.rs  wasm.spec.js
tests/__snapshots__/: wasm.spec.js.snap
