[package]
name = "sql-parser-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Casual Simulation"]
description = "A SQL Parser with WASM and JavaScript bindings"
license = "MIT"
repository = "https://github.com/casual-simulation/sql-parser"
readme = "README.md"
keywords = ["sql", "parser", "wasm", "javascript"]
categories = ["parsing", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sqlparser = { version = "0.59", default-features = false, features = ["std", "serde", "visitor"] }
serde_json = "1.0"
serde-wasm-bindgen = { version = "0.6", optional = true }

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.js-sys]
version = "0.3"
optional = true

[dependencies.web-sys]
version = "0.3"
optional = true
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "serde-wasm-bindgen"]

[profile.release]
# Optimize for size for WASM builds
opt-level = "s"
lto = true
